--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -36,6 +36,12 @@
       ],
       "components/*": [
         "dist/components/*"
+      ],
+      "auth": [
+        "dist/auth"
+      ],
+      "auth/*": [
+        "dist/auth/*"
       ]
     }
   },
